@@ -1760,7 +1760,14 @@ arg		: lhs '=' arg
 		    /*%%%*/
 			value_expr($1);
 			value_expr($3);
-			$$ = NEW_DOT2($1, $3);
+			if (nd_type($1) == NODE_LIT && FIXNUM_P($1->nd_lit) &&
+			    nd_type($3) == NODE_LIT && FIXNUM_P($3->nd_lit)) {
+			    $1->nd_lit = rb_range_new($1->nd_lit, $3->nd_lit, Qfalse);
+			    $$ = $1;
+			}
+			else {
+			    $$ = NEW_DOT2($1, $3);
+			}
 		    /*%
 			$$ = dispatch2(dot2, $1, $3);
 		    %*/
@@ -1770,7 +1777,14 @@ arg		: lhs '=' arg
 		    /*%%%*/
 			value_expr($1);
 			value_expr($3);
-			$$ = NEW_DOT3($1, $3);
+			if (nd_type($1) == NODE_LIT && FIXNUM_P($1->nd_lit) &&
+			    nd_type($3) == NODE_LIT && FIXNUM_P($3->nd_lit)) {
+			    $1->nd_lit = rb_range_new($1->nd_lit, $3->nd_lit, Qtrue);
+			    $$ = $1;
+			}
+			else {
+			    $$ = NEW_DOT3($1, $3);
+			}
 		    /*%
 			$$ = dispatch2(dot3, $1, $3);
 		    %*/
